--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,16 @@ dependencies {
     ext.koin = "3.2.1"
     ext.room_version = "2.5.0-alpha03"
 
+    ext.junit_version= '4.13.2'
+    ext.junit_x_ext = "1.1.3"
+    ext.espresso_contrib = "3.3.0"
+    ext.mockk_version = "1.9.3"
+    ext.mockito_version = "3.5.13"
+    ext.coroutines_test = "1.4.3"
+    ext.mockk_version = '1.10.6'
+    ext.arch_testing = "1.1.1"
+    ext.arch_version = "2.1.0"
+
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
@@ -103,4 +113,14 @@ dependencies {
 
     // plotting
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    // Test
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$junit_x_ext"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_contrib"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    testImplementation "org.mockito:mockito-inline:$mockito_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_test"
+    testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "android.arch.core:core-testing:$arch_testing"
 }
